feat: remove friends
